syntax = "proto3";

package meteroid.api.customers.v1;

import "google/protobuf/timestamp.proto";

message CustomerBillingConfig {
  message Stripe {
    string customer_id = 1;
    CollectionMethod collection_method = 2;

    enum CollectionMethod {
      SEND_INVOICE = 0;
      CHARGE_AUTOMATICALLY = 1;
    }
  }

  oneof billing_config_oneof {
    Stripe stripe = 1;
  }
}

message CustomerList {
  string id = 1;
  string name = 2;
  optional string email = 3;
  optional string alias = 4;
}

message Customer {
  string id = 1;
  string name = 2;
  optional string email = 3;
  optional string alias = 4;
  CustomerBillingConfig billing_config = 5;
  optional string invoicing_email = 6;
  optional string phone = 7;
  int32 balance_value_cents = 8;
  string balance_currency = 9;
  optional google.protobuf.Timestamp archived_at = 10;
  optional google.protobuf.Timestamp created_at = 11;
  string billing_address_line1 = 12;
  string billing_address_line2 = 13;
  string billing_address_city = 14;
  string billing_address_country = 15;
  string billing_address_state = 16;
  string billing_address_zipcode = 17;
  bool shipping_address_same = 18;
  string shipping_address_line1 = 19;
  string shipping_address_line2 = 20;
  string shipping_address_city = 21;
  string shipping_address_country = 22;
  string shipping_address_state = 23;
  string shipping_address_zipcode = 24;
}
